# CondresControlCenter

./: CMakeLists.txt  CTestTestfile.cmake  Changelog  CondresControlCenter.kdev4  README.md  control_center.kdev4  ecm_uninstall.cmake  install_manifest.txt  removefile.sh
cmake/modules/: DetectMachine.cmake  FindAlpm.cmake  FindAlpmOctopi.cmake
notifier/: .directory  CMakeLists.txt  CchClient.cpp  NotifierCondres.cpp  NotifierCondres.h  main.cpp
notifier/condres-notifier/: .directory  CMakeLists.txt  CTestTestfile.cmake  NotifierApp.cpp  NotifierCondres.cpp  NotifierCondres.h  NotifierControlCenter.desktop  main.cpp  moc_NotifierApp.cpp_parameters  moc_NotifierCondres.cpp_parameters
notifier/condres-notifier/NotifierControlCenter_autogen/: moc_predefs.h
notifier/condres-notifier/__/__/src/: moc_about.cpp_parameters  moc_settingsmanager.cpp_parameters
notifier/condres-notifier/__/__/src/backend/: moc_backend.cpp_parameters
notifier/condres-notifier/__/pacmanhelper/: moc_pacmanhelperclient.cpp_parameters
notifier/condres-notifier/kdsingleapplicationguard/: kdsingleapplicationguard.cpp  kdsingleapplicationguard.h
notifier/pacmanhelper/: .directory  CMakeLists.txt  CTestTestfile.cmake  CchAdaptor.cpp  CchAdaptor.h  CchClient.h  CchHelper.cpp  CchHelper.h  README  main.cpp  moc_pacmanhelper.cpp_parameters  moc_pacmanhelperadaptor.cpp_parameters  moc_pacmanhelperclient.cpp_parameters  pacmanhelper  pacmanhelper.cpp  pacmanhelper.h  pacmanhelperadaptor.cpp  pacmanhelperadaptor.h  pacmanhelperclient.cpp  pacmanhelperclient.h
notifier/pacmanhelper/pacmanhelper_autogen/: moc_predefs.h
notifier/pacmanhelper/polkit/: .directory  org.condrescontrolcenter.pacmanhelper.service  org.condrescontrolcenter.pacmanhelper.xml
notifier/polkit/: .directory  org.condrescontrolcenter.pacman.policy  org.condrescontrolcenter.pacmanhelper.conf
src/: .directory  Apply.cpp  Apply.h  CMakeLists.txt  CTestTestfile.cmake  CheckBox.cpp  CheckBox.h  InstallPackages.cpp  InstallPackages.h  PageWidget.cpp  PageWidget.h  RadioButton.cpp  RadioButton.h  Samba.cpp  Samba.h  about.cpp  about.h  constant.h  ctablewidget.cpp  ctablewidget.h  depends.cpp  depends.h  esci.cpp  esci.h  images.qrc  images.qrc.depends  itdelegato.cpp  itdelegato.h  logfile.cpp  logfile.h  main.cpp  mainwindow.cpp  mainwindow.h  moc_CheckBox.cpp_parameters  moc_InstallPackages.cpp_parameters  moc_ListWidget.cpp_parameters  moc_PageWidget.cpp_parameters  moc_RadioButton.cpp_parameters  moc_Samba.cpp_parameters  moc_about.cpp_parameters  (+30 more)
src/backend/: backend.cpp  backend.h  moc_backend.cpp_parameters
src/bash/: CondresControlCenterBin  CondresControlCenterInstallBin  CondresControlCenterUpdateBin
src/cachecleaner/: .directory  cachecleaner.cpp  moc_cachecleaner.cpp_parameters  moc_packagegroupmodel.cpp_parameters  packagegroupmodel.cpp  packagegroupmodel.h
src/cachecleaner/ui/: cachecleaner.ui
src/database/: condrescontrolcenter.db
src/desktop/: CondresControlCenter.desktop
src/gui/: AddSamba.ui  Apply.ui  InstallPackages.ui  NfsConfig.ui  Samba.ui  SambaPrinter.ui  about.ui  depends.ui  esci.ui  logfile.ui  mainwindow.ui  nfsshare.ui  samba_conf_dir.ui  sambauser.ui  servicemanagement.ui  upgrade.ui
src/keyboard/: .directory  KeyboardModel.cpp  KeyboardModel.h  KeyboardPage.cpp  KeyboardPage.h  moc_KeyboardCommon.cpp_parameters  moc_KeyboardItem.cpp_parameters  moc_KeyboardModel.cpp_parameters  moc_KeyboardPage.cpp_parameters  moc_KeyboardPreview.cpp_parameters  moc_SetKeyboardLayoutJob.cpp_parameters  qrc_keyboard.cpp
src/keyboard/ui/: PageKeyboard.ui
src/locale/: EnabledLocalesModel.cpp  EnabledLocalesModel.h  LanguageCommon.cpp  LocalePage.cpp  LocalePage.h  SupportedLocalesModel.cpp  SupportedLocalesModel.h  moc_EnabledLocalesModel.cpp_parameters  moc_LanguageCommon.cpp_parameters  moc_LanguageListViewDelegate.cpp_parameters  moc_LocaleCommon.cpp_parameters  moc_LocalePage.cpp_parameters  moc_SelectLocalesDialog.cpp_parameters  moc_SupportedLocalesItem.cpp_parameters  moc_SupportedLocalesModel.cpp_parameters
src/locale/ui/: LocaleModule.ui  SelectLocalesDialog.ui
src/mhwd/: .directory  MhwdCommon.cpp  MhwdCommon.h  MhwdPage.cpp  moc_MhwdCommon.cpp_parameters  moc_MhwdPage.cpp_parameters
src/mhwd/libmhwd/: .directory  mhwd.cpp  moc_const.cpp_parameters  moc_mhwd.cpp_parameters  moc_mhwd_p.cpp_parameters
src/mhwd/libmhwd/vita/: .directory  moc_string.cpp_parameters
src/mhwd/ui/: PageMhwd.ui
src/repoeditor/: .directory  addrepo.cpp  moc_addrepo.cpp_parameters  moc_checkboxdelegate.cpp_parameters  moc_optionsdelegate.cpp_parameters  moc_repoconf.cpp_parameters  moc_repoeditor.cpp_parameters  moc_repoentry.cpp_parameters  repoconf.cpp  repoconf.h  repoeditor.cpp  repoeditor.h  repoeditor.ui
src/timedate/: TimeDatePage.cpp  moc_LocaleGlobal.cpp_parameters  moc_TimeDateCommon.cpp_parameters  moc_TimeDatePage.cpp_parameters  moc_TimeDateService.cpp_parameters  moc_TimeZoneDialog.cpp_parameters  moc_TimeZoneWidget.cpp_parameters
src/users/: AccountTypeDialog.cpp  AccountTypeDialog.h  AddUserDialog.cpp  ChangePasswordDialog.cpp  UsersCommon.cpp  UsersCommon.h  UsersPage.cpp  moc_AccountTypeDialog.cpp_parameters  moc_AddUserDialog.cpp_parameters  moc_ChangePasswordDialog.cpp_parameters  moc_FlatButton.cpp_parameters  moc_PreviewFileDialog.cpp_parameters  moc_UsersCommon.cpp_parameters  moc_UsersPage.cpp_parameters
src/users/ui/: AccountTypeDialog.ui  AddUserDialog.ui  ChangePasswordDialog.ui  PageUsers.ui
